fixed webkit-scrollbar for all textarea

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -2663,9 +2663,6 @@ button.raw-tag-option svg.icon {
     font-family: monospace;
     white-space: pre;
 }
-.tag-text::-webkit-scrollbar-thumb:hover { 
-    cursor: auto;
-}
 
 .tag-text,
 .tag-list {
@@ -5776,6 +5773,7 @@ li.hide + li.version .badge .tooltip .popover-arrow {
     border: solid transparent;
     border-width: 3px 3px 3px 4px;
     border-radius: 6px;
+    cursor: auto;
 }
 ::-webkit-scrollbar-track:active {
     background-color: rgba(0,0,0,.05);
